  o Fix FLAC read from stdin with libFLAC >= 8.  (Patrick Taylor Ramsey/robs)

Effects:

  o New `splice' effect; splice together audio sections.  (robs)
  o New `remix' effect; complements the mixer effect.  (robs)
  o New `norm' (normalise) effect.  (robs)
  o New `delay' effect; delay one or more channels.  (robs)
  o New `contrast' enhancement effect [FR 708923].  (robs)
  o Fix crash on 64-bit arch. with tempo & key effects.  (Sami Liedes)
  o Fix synth max. level setting for some output encodings.  (robs)
  o `gain' alias for the vol effect.  (robs)

Other new features:

  o Command line support for multiple file comments.  (robs)
  o Soxi utility to extract/display file header fields.  (robs)
  o Pkg-config support. (Pascal Giard)
  o Basic VU meter.  (robs)
  o Simple heuristic to detect when playing an album and set
    the default replay-gain mode to `album'.  (robs)
  o Better auto-choice of output file format parameters when
    type is different to that of input file.  (robs)
  o SoX now treats (and displays) encoding size & signal precision
    separately.  (robs)
  o Default audio devices (sox), and allow environment variables to
    be used to override the default audio device driver (rec/play)
    and default audio device (all).  (robs)
  o Simpler file info display for `play'.  (robs)
  o Added example2: simple example of how to use libSoX to read an
    audio file.  (robs)
  o For some file-types, warn if file size seems too short.  (robs)
  o Added auto-detect for caf, sndr, txw & sf files.  (robs)

Other bug fixes:

  o Fix [1890983] rec shortcut should apply bit depth (8-bit,
    16-bit, etc.) to input handler.  (robs)
  o Fix auto-detect of hcom files.  (robs)
  o Fix ungraceful handling of out of disc space and other write
    errors (bug was introduced in 14.0.0).  (robs)
  o Fix endian selection (-B, -L, -x) in some circumstances.  (robs)

Internal improvements:

  o Use FORTIFY_SOURCE with gcc.  (robs)